--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,7 +18,7 @@ $header-height: 3rem;
     --normal-font-size: .938rem;
   
     /*===== z index =====*/
-    --z-fixed: 100;
+    --z-fixed: ;
 }
 
 @media screen and (min-width: 768px){
@@ -35,7 +35,8 @@ $header-height: 3rem;
 :root {
     --first-color: #0396A6;
     --dark-color: #000;
-    --white-color: #F2F2F2;
+    --white-color: #6495ED;
+    --white-color1: #ffffff;
   }
   
   /*=== Fuente y tipografia ===*/
@@ -89,6 +90,7 @@ ul{
 
 a{
     text-decoration: none;
+
 }
 
 img{
@@ -106,15 +108,19 @@ img{
     width: calc(100% - 2rem);
     margin-left: 1rem;
     margin-right: 1rem;
+    
 }
+
+
 .l-header{
     width: 100%;
-    opacity :0.35;
+    opacity :1;
     position: fixed;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--first-color);
+    background-color: var(--white-color);
+    z-index: 2000;
 }
 
 /*===== NAV =====*/
@@ -124,24 +130,26 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: var(--z-fixed);
 
     &__menu{
         @media screen and (max-width: 2000px){
             position: fixed;
             top: 0;
             right: -100%;
-            width: 200px;
-            height: 500px;
+            width: 240px;
+            height: 100%;
             padding: 3.5rem 1.5rem 0;
             background: rgba(255, 255, 255, 0.3);
             backdrop-filter: blur(10px);
             transition: .5s;
+
         }
     }
     &__close{
         position: absolute;
-        top: .75rem;
-        right: 1rem;
+        top: .5rem;
+        left: 1rem;
         font-size: 1.5rem;
         cursor: pointer;
     }
@@ -149,13 +157,15 @@ img{
         margin-bottom: 2rem;
     }
 
-    &__close, &__link, &__logo, &__toggle{
-        color: var(--white-color);
+    &__close,  &__logo, &__toggle{
+        color: var(--white-color1);
+        z-index: var(--z-fixed);
     }
     &__logo{
         padding-left: 35px;
     }
     &__link{
+        color: var(--white-color);
         &:hover{
             color: var(--first-color-dark);
         }
@@ -231,23 +241,23 @@ img{
         background-position: center;
 
         &-img1{
-            background-image: url('imgm1.png');
+            background-image: url('anh1.png');
             z-index: var(--z-normal);
         }
         &-img2{
-            background-image: url('imgm2.png');
+            background-image: url('anh2.png');
             z-index: var(--z-tooltip);
         }
         &-img3{
-            background-image: url('imgm3.png');
+            background-image: url('anh3.png');
             z-index: var(--z-fixed );
         }
         &-img4{
-            background-image: url('imgm4.png');
+            background-image: url('anh4.png');
             z-index: var(--z-fixed );
         }
         &-img5{
-            background-image: url('imgm5.png');
+            background-image: url('anh5.png');
             z-index: var(--z-fixed);
             
         }
@@ -262,7 +272,7 @@ img{
         width: 100%;
         display: flex;
         justify-content: left;
-        color: var(--white-color);
+        color: var(--white-color1);
     }
 
     &__title{
@@ -303,8 +313,34 @@ img{
 }
 
 .section{
-    height: 100vh;
-    max-width: 950px;
+    height: 68vh;
+    max-width: 1000px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding: 2rem 0;
+    color: var(--white-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    &__data{
+        margin-bottom: 3rem;
+    }
+    &__title{
+        font-size: var(--h2-font-size);
+        color: var(--first-color);
+        margin-bottom: 1rem;
+    }
+    &__img{
+        width: 285px;
+        border-radius: .5rem;
+    }
+
+}
+.section2{
+    height: 50vh;
+    max-width: 1000px;
     margin-left: 1rem;
     margin-right: 1rem;
     padding: 2rem 0;
@@ -336,23 +372,9 @@ img{
 /*===== MEDIA QUERIES =====*/
 @media screen and(min-width: 760px){
  
-    .about{
-        &__container{
-            grid-template-columns: repeat(2, 1fr);
-            align-items: center;
-            text-align: initial;
-            padding: 4rem 0;
-        }
-        &__img{
-            width: 200px;
-            height: 200px;
-    
-            & img{
-                width: 165px;
-            }
-        }
-    }
+        
     .contact{
+        
         &__container{
             grid-template-columns: repeat(2,1fr);
             justify-items: center;
@@ -397,40 +419,32 @@ img{
         margin-right: 0;
     }
 }
+@media screen and (min-width: 1200px){
+    .bd-grid1{
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
 /* ===== ABOUT =====*/
 .about{
-    &__container{
-        justify-items: center;
-        row-gap: 2rem;
-        text-align: center;
-    }
-    &__img{
-        display: flex;
-        justify-content: center;
-        padding-top: 1rem;
-        width: 120px;
-        height: 120px;
-        background-color: var(--first-color);
-        border-radius: 50%;
-        overflow: hidden;
-
-        & img{
-            width: 100px;
-        }
-    }
+   
     &__subtitle{
         font-size: var(--h2-font-size);
         color: var(--first-color);
         margin-bottom: var(--mb-1);
+        text-align: center;
     }
     &__text{
         margin-bottom: var(--mb-4);
+        text-align: center;
     }
     &__profession{
         display: block;
         margin-bottom: var(--mb-4);
+        text-align: center;
     }
     &__social{
+        text-align: center;
         &-icon{
             font-size: 1.4rem;
             margin: 0 var(--mb-1);
@@ -443,6 +457,19 @@ img{
 }
 
 /* ===== CONTACT =====*/
+
+
+.bxl-linkedin{
+    padding-right:20px;
+}
+.bxl-github{
+    padding:20px;
+}
+
+.bxl-dribbble{
+    padding:20px;
+}
+    
 .contact{
     &__container{
         row-gap: 2rem;
@@ -520,4 +547,519 @@ img{
             color: var(--dark-color);
         }
     }
+}
+
+
+@media screen and(min-width: 570px){
+
+  
+.sticky {
+    position: fixed;
+    top: var(--header-height);
+background-color:white;
+    max-width: 1265px;
+
+
+    margin-left: auto;
+    margin-right:auto;
+
+z-index: 1000;
+
+  }
+  
+.sticky {
+    padding-top: var(--header-height);
+    padding: 4rem 0;
+  }
+
+}
+
+  #myheader2{
+      height: 160px;
+  }
+
+  .search{
+
+          font-size: 2rem;
+          color:rgb(116, 118, 146) ;
+
+      
+  }
+  .search :hover{
+    color:rgb(16, 167, 194) ;
+    
+
+}
+
+.banner{
+    opacity: 1;
+
+    margin: auto;
+    width: 970px;
+   
+    height: 68vh;
+
+    padding: 2rem 0;
+    margin-top: 0.2%;
+    color: var(--white-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: transform 2s ease-in-out;
+
+}
+.banner1{
+    background-color:#e2f4de;
+}
+.banner2{
+    background-color:#B0C4DE;
+}
+.banner3{
+    background-color:#B0E0E6;
+}
+.banner4{
+    background-color:#F5DEB3;
+}
+.banner_zom{
+    transform: scale(0.95);
+}
+
+.chungtoi{
+   padding-top: 25%;
+}
+
+.bookingg{
+    transform: scale(0.95);
+    overflow: auto;
+    border: #FCA4A6 3px;
+    background-color: #d4c5c5;
+    transition: transform 2s ease-in-out;
+    opacity: 1;
+    width: 970px;
+    height: 53vh;
+    padding: 2rem 0;
+    color: var(--white-color);
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: transform 1.5s ease-in-out;
+}
+
+#anhdu{
+    height: 50%;
+}
+
+.quan {
+    margin-left: -10px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 1050px;
+  }
+  
+  .prolayer-fly {
+    margin-top: -10px;
+    margin-bottom: -5px;
+  }
+  
+  .prolayer3 {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    margin-left: -5px;
+  }
+  
+  .prolayze {
+    margin-top: -50px;
+    margin-left: 68px;
+    cursor: pointer;
+  }
+  
+  .prolayer2 {
+    margin-top: 20px;
+    margin-bottom: 17px;
+    margin-left: -15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  
+  .prolay-sky {
+    margin-top: 20px;
+    margin-bottom: -5px;
+  }
+  
+  .prolayer {
+    margin-top: -10px;
+    margin-bottom: 10px;
+    margin-left: -5px;
+  }
+  
+  .yasuo {
+    margin-top: -10px;
+    margin-bottom: 10px;
+    margin-left: -20px;
+  }
+  
+  .list-fly {
+    margin-left: 195px;
+    margin-top: -50px;
+  }
+  
+  .list-skyline {
+    margin-left: 100px;
+    margin-top: -50px;
+  }
+  
+  .list-money {
+    margin-left: 220px;
+    margin-top: -50px;
+  }
+  
+  .list-animals {
+    margin-left: 200px;
+    margin-top: -50px;
+  }
+  
+  .list-member {
+    margin-left: 100px;
+    margin-top: -50px;
+  }
+  
+  .list-smilt {
+    margin-left: 220px;
+    margin-top: -50px;
+  }
+  
+  .list-sockets {
+    margin-left: 180px;
+    margin-top: -50px;
+  }
+  
+  .list-dual {
+    margin-left: 100px;
+    margin-top: -50px;
+  }
+  
+  .list-quite {
+    margin-left: 220px;
+    margin-top: -50px;
+  }
+  
+  .list-probi {
+    margin-left: 195px;
+    margin-top: -50px;
+  }
+  
+  .list-single {
+    margin-left: 100px;
+    margin-top: -50px;
+  }
+  
+  .list-happy {
+    margin-left: 220px;
+    margin-top: -50px;
+  }
+  
+  .list-sock {
+    margin-left: 190px;
+    margin-top: -50px;
+  }
+  
+  .list-du {
+    margin-left: 100px;
+    margin-top: -50px;
+  }
+  
+  .list-qui {
+    margin-left: 220px;
+    margin-top: -50px;
+  }
+  
+  .prolay {
+    margin-top: -55px;
+    margin-left: 70px;
+  }
+  
+  .prolayy {
+    margin-top: -60px;
+    margin-left: 60px;
+    margin-bottom: -5px;
+  }
+  
+  b {
+    font-size: 14px;
+    color: black;
+  }
+  
+  p {
+    font-size: 13px;
+    color: black;
+  }
+  
+  .khoangtrang {
+    height: 220px;
+    background-color: #ffffff;
+  }
+
+
+
+  #myCarousel .carousel-item .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-attachment: fixed
+}
+
+#myCarousel h4 {
+    font-size: 50px;
+    margin-bottom: 15px;
+    color: #FFF;
+    line-height: 100%;
+    letter-spacing: 0.5px;
+    font-weight: 600
+}
+
+#myCarousel p {
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: #d5d5d5
+}
+
+#myCarousel .carousel-item a {
+    background: #FF0000;
+    font-size: 14px;
+    color: #FFF;
+    padding: 13px 32px;
+    display: inline-block
+}
+
+#myCarousel .carousel-item a:hover {
+    background: #FF0000;
+    text-decoration: none
+}
+
+#myCarousel .carousel-item h4 {
+    -webkit-animation-name: fadeInLeft;
+    animation-name: fadeInLeft
+}
+
+#myCarousel .carousel-item p {
+    -webkit-animation-name: slideInRight;
+    animation-name: slideInRight
+}
+
+#myCarousel .carousel-item a {
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp
+}
+
+#myCarousel .carousel-item .mask img {
+    -webkit-animation-name: slideInRight;
+    animation-name: slideInRight;
+    display: block;
+    height: auto;
+    max-width: 100%
+}
+
+#myCarousel h4,
+#myCarousel p,
+#myCarousel a,
+#myCarousel .carousel-item .mask img {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1.2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both
+}
+
+#myCarousel .container {
+    max-width: 1430px
+}
+
+#myCarousel .carousel-item {
+    height: 100%;
+    min-height: 550px
+}
+
+#myCarousel {
+    position: relative;
+    z-index: 1;
+    background: #000;
+    background-size: cover
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+    height: 40px;
+    width: 40px;
+    padding: 12px;
+    top: 50%;
+    bottom: auto;
+    transform: translateY(-50%);
+    background-color: #FF0000
+}
+
+.carousel-item {
+    position: relative;
+    display: none;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    transition: -webkit-transform .6s ease;
+    transition: transform .6s ease;
+    transition: transform .6s ease, -webkit-transform .6s ease;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000px;
+    perspective: 1000px
+}
+
+.carousel-fade .carousel-item {
+    opacity: 0;
+    -webkit-transition-duration: .6s;
+    transition-duration: .6s;
+    -webkit-transition-property: opacity;
+    transition-property: opacity
+}
+
+.carousel-fade .carousel-item-next.carousel-item-left,
+.carousel-fade .carousel-item-prev.carousel-item-right,
+.carousel-fade .carousel-item.active {
+    opacity: 1
+}
+
+.carousel-fade .carousel-item-left.active,
+.carousel-fade .carousel-item-right.active {
+    opacity: 0
+}
+
+.carousel-fade .carousel-item-left.active,
+.carousel-fade .carousel-item-next,
+.carousel-fade .carousel-item-prev,
+.carousel-fade .carousel-item-prev.active,
+.carousel-fade .carousel-item.active {
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0)
+}
+
+@supports (transform-style:preserve-3d) {
+
+    .carousel-fade .carousel-item-left.active,
+    .carousel-fade .carousel-item-next,
+    .carousel-fade .carousel-item-prev,
+    .carousel-fade .carousel-item-prev.active,
+    .carousel-fade .carousel-item.active {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+.carousel-fade .carousel-item-left.active,
+.carousel-fade .carousel-item-next,
+.carousel-fade .carousel-item-prev,
+.carousel-fade .carousel-item-prev.active,
+.carousel-fade .carousel-item.active {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0)
+}
+
+@-webkit-keyframes fadeInLeft {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+@keyframes fadeInLeft {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+.fadeInLeft {
+    -webkit-animation-name: fadeInLeft;
+    animation-name: fadeInLeft
+}
+
+@-webkit-keyframes fadeInUp {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+.fadeInUp {
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp
+}
+
+@-webkit-keyframes slideInRight {
+    from {
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
+        visibility: visible
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+@keyframes slideInRight {
+    from {
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
+        visibility: visible
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+.slideInRight {
+    -webkit-animation-name: slideInRight;
+    animation-name: slideInRight
 }
