--- a/scss/styles.css
+++ b/scss/styles.css
@@ -67,8 +67,10 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-html{
+html, body{
+  position:relative;
   overflow-x:hidden;
+
 }
 body {
   margin: var(--header-height) 0 0 0;
