--- a/scss/styles.css
+++ b/scss/styles.css
@@ -434,6 +434,39 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
+  .banner2 img {
+
+    transition: all 1000ms ease-in-out;
+  }
+  
+  
+  
+  .banner2 img:hover{
+  
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
+    transform: translateX(-1rem);
+  
+  }
+  
+  .banner3 img {
+  
+    transition: all 1000ms ease-in-out;
+  }
+  
+  .banner3 img:hover{
+ 
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
+    transform: translateX(1rem);
+  
+  }
+
+  
+  
+  .dulich h1:hover{
+  
+    cursor: pointer;
+    transform: translateY(-0.5rem);
+  }
   .bd-grid1 {
     margin-left: 0;
     margin-right: 0;
@@ -884,25 +917,7 @@ display: none;
 
 @media screen and (max-width: 1000px) {
 
-  .banner3 img:hover{
- 
-    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
-    transform: translateX(1rem);
   
-  }
-  
-  .dulich h1 {
-  
-    transition: all 1000ms ease-in-out;
-  }
-  
-  
-  
-  .dulich h1:hover{
-  
-    cursor: pointer;
-    transform: translateY(-0.5rem);
-  }
   
   .home__parallax-img5 {
     background-image: url("anh51.png");
@@ -1038,7 +1053,7 @@ color:#3948b1;
 }
 
 .form_bn3 h1 {
-  font-size: 60px;
+  font-size: 80px;
 }
 
 .khoangtrangshow {
@@ -1144,6 +1159,7 @@ color:#3948b1;
   transition: .3s;
 }
 
+
 .form__button{
   
   display: block;
@@ -1198,26 +1214,21 @@ color:#3948b1;
 .out:hover{
   color:rgb(230, 112, 17);
 }
-.banner2 img {
 
-  transition: all 1000ms ease-in-out;
+
+
+.timkiem body {
+  background: #051329
 }
 
-
-
-.banner2 img:hover{
-
-  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
-  transform: translateX(-1rem);
-
+.timkiem {
+  padding-top:1px;
+  height: 20px;
 }
 
-.banner3 img {
-
-  transition: all 1000ms ease-in-out;
+.timkiem .form {
+  position: relative
 }
-
-
 
 
 
