--- a/scss/styles.css
+++ b/scss/styles.css
@@ -137,6 +137,19 @@ img {
           align-items: center;
   z-index: var(--z-fixed);
 }
+.nav1 {
+  height: var(--header-height);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: var(--z-fixed);
+}
 
 @media screen and (max-width: 2000px) {
   .nav__menu {
@@ -906,18 +919,31 @@ display: none;
 
 @media screen and (max-width: 1000px) {
 
+
+  .anhdulich .card {
+    
+    border: none;
+    border-radius: 12px;
+    position: relative
+  }
+
+  .thongbao{
+    display:none;
+  }
+
   .nav__logo {
     padding-left: 2px;
    
    
   }
+ 
   
   .home__parallax-img5 {
     background-image: url("anh51.png");
     z-index: var(--z-fixed);
   }
 .nav__menu{
-  width: 340px;
+  width: 380px;
 }
   
 
@@ -1414,5 +1440,114 @@ select:focus {
 
 .btn-primary:focus {
   box-shadow: none
+}
+
+
+.thanhtoan{
+  visibility: hidden;
+  position:absolute;
+background-color:none;
+
+width: 400px;
+margin-left: auto;
+
+}
+.thanhtoanshow{
+  visibility: visible;
+}
+
+
+
+.thanhtoan body {
+  background-color: #ffffff;
+  margin: auto;
+  
+
+}
+
+.thanhtoan .container {
+  margin: auto;
+ 
+  width: 400px;
+  background-color: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  
+}
+
+.thanhtoan .card {
+  background-color: rgb(0, 0, 0);
+  width: 300px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+
+.name {
+  font-size: 15px;
+  color: #403f3f;
+  font-weight: bold
+}
+
+.cross {
+  font-size: 11px;
+  color: #b0aeb7
+}
+
+.pin {
+  font-size: 14px;
+  color: #b0aeb7
+}
+
+.thanhtoan .first {
+  border-radius: 8px;
+  border: 1.5px solid #78b9ff;
+  color: #000;
+  background-color: #eaf4ff
+}
+
+.second {
+  border-radius: 8px;
+  border: 1px solid #acacb0;
+  color: #000;
+  background-color: #fff
+}
+
+.dot {}
+
+.head {
+  color: #137ff3;
+  font-size: 12px
+}
+
+.dollar {
+  font-size: 18px;
+  color: #097bf7
+}
+
+.amount {
+  color: #007bff;
+  font-weight: bold;
+  font-size: 18px
+}
+
+.form-control {
+  font-size: 18px;
+  font-weight: bold;
+  width: 60px;
+  height: 28px
+}
+
+.thanhtoan .back {
+  color: #aba4a4;
+  font-size: 15px;
+  line-height: 73px;
+  font-weight: 400
+}
+
+.thanhtoan .button {
+  width: 150px;
+  height: 60px;
+  border-radius: 8px;
+  font-size: 17px
 }
 
