--- a/scss/styles.css
+++ b/scss/styles.css
@@ -119,13 +119,13 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: #43485b;
+  background-color: #000000;
   z-index: 2000;
 }
 
 /*===== NAV =====*/
 .nav {
-  height: var(--header-height);
+  height: var(--header-height) +50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -223,7 +223,7 @@ img {
 }
 
 .home__parallax-img1 {
-  background-image: url("anh1.png");
+  background-image: url("anh1.jpg");
   z-index: var(--z-normal);
 }
 
@@ -969,7 +969,7 @@ display: none;
  }
 .home__title{
   top:30%;
-  left:54%;
+  left:35%;
 
 }
 .header2{
@@ -1553,4 +1553,8 @@ margin-left: auto;
 
 .showdangnhap{
   display:none;
+}
+
+.xoay{
+  transform: rotate(90deg);
 }
