--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,18 +1,18 @@
-/*===== GOOGLE FONTS =====*/
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-/*===== VARIABLES CSS =====*/
+
 :root {
   --header-height: 3rem;
-  /*===== Colors =====*/
+
   --first-color: #FCA4A6;
   --first-color-dark: #C1576A;
   --first-color-darken: #A83E51;
   --white-color: #FCF8F8;
-  /*===== Font and typography =====*/
+
   --body-font: 'Poppins', sans-serif;
   --big-font-size: 2.5rem;
   --normal-font-size: .938rem;
-  /*===== z index =====*/
+
   --z-fixed: ;
 }
 
@@ -25,7 +25,7 @@
 
 
 
-/*===== BASE =====*/
+
 *, ::before, ::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -38,7 +38,7 @@
   --white-color1: #ffffff;
 }
 
-/*=== Fuente y tipografia ===*/
+
 :root {
   --body-font: 'Open Sans', sans-serif;
   --biggest-font-size: 3.5rem;
@@ -54,7 +54,7 @@
   }
 }
 
-/*=== z index ===*/
+
 :root {
   --z-back: -10;
   --z-normal: 1;
@@ -64,7 +64,6 @@
   --z-may:99;
 }
 
-/*===== BASE =====*/
 *, ::before, ::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -100,7 +99,7 @@ img {
   height: auto;
 }
 
-/*===== LAYOUT =====*/
+
 .bd-grid {
   max-width: 2200px;
   display: -ms-grid;
@@ -125,7 +124,7 @@ img {
   z-index: 2000;
 }
 
-/*===== NAV =====*/
+
 .nav {
   height: var(--header-height) +50px;
   display: -webkit-box;
@@ -200,12 +199,11 @@ img {
   cursor: pointer;
 }
 
-/*=== Show menu ===*/
+
 .show {
   right: 0;
 }
 
-/*===== HOME =====*/
 
 
 .home {
@@ -311,7 +309,7 @@ img {
   height: 220px;
   background-color: #ffffff;
 }
-/*===== SECTION =====*/
+
 .l-section {
   background-color: var(--dark-color);
 }
@@ -368,7 +366,7 @@ img {
   margin-top: 500px;
 }
 
-/*===== MEDIA QUERIES =====*/
+
 @media screen and (min-width: 760px) {
   .contact__container {
     -ms-grid-columns: (1fr)[2];
@@ -448,7 +446,7 @@ img {
   }
 }
 
-/* ===== ABOUT =====*/
+
 .about__subtitle {
   font-size: var(--h2-font-size);
   color: #da463c;
@@ -482,7 +480,7 @@ img {
   color: var(--first-color);
 }
 
-/* ===== CONTACT =====*/
+
 .bxl-linkedin {
   padding-right: 20px;
 }
@@ -495,98 +493,8 @@ img {
   padding: 20px;
 }
 
-.contact__container {
-  row-gap: 2rem;
-}
 
-.contact__subtitle {
-  font-size: var(--normal-font-size);
-  color: var(--first-color);
-}
 
-.contact__text {
-  display: inline-block;
-  margin-bottom: var(--mb-2);
-}
-
-.contact__inputs {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
-}
-
-.contact__input {
-  width: 100%;
-  padding: .8rem;
-  outline: none;
-  border: 1.5px solid var(--dark-color);
-  font-size: var(--normal-font-size);
-  margin-bottom: var(--mb-4);
-  border-radius: .5rem;
-}
-
-.contact__button {
-  display: block;
-  background-color: var(--first-color);
-  color: var(--white-color);
-  padding: .75rem 2.5rem;
-  margin-left: auto;
-  border-radius: .5rem;
-  border: none;
-  outline: none;
-  font-size: var(--normal-font-size);
-  cursor: pointer;
-}
-
-/* ===== PORTFOLIO =====*/
-.portfolio {
-  background-color: var(--white-color);
-}
-
-.portfolio__img {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio__img img {
-  border-radius: .5rem;
-  margin-left: 0%;
-  margin-right: 0%;
-}
-
-.portfolio__img:hover .portfolio__link {
-  bottom: 0;
-}
-
-.portfolio__link {
-  position: absolute;
-  bottom: -100%;
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: rgba(255, 255, 255, 0.3);
-  border-radius: .5rem;
-  cursor: pointer;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.portfolio__link-name {
-  color: var(--dark-color);
-}
 
 @media screen and (min-width: 570px) {
   .sticky {
@@ -1276,7 +1184,8 @@ color:#3948b1;
   padding-left: 10px !important;
   padding-bottom: 10px !important;
   padding-right: 10px !important;
-  padding-top: 0px !important
+  padding-top: 0px !important;
+ 
 }
 
 .the-title {
@@ -1287,19 +1196,17 @@ color:#3948b1;
   width: 80%
 }
 
-div.the-body {
-  padding: 0px
-}
+
 
 .custom-select {
   width: 100%
 }
 
-.btn2 {
+ .btn2 {
   margin-left: 10%
 }
 
-input {
+ input {
   outline: 0 !important;
   border-width: 0 0 2px !important;
   border-color: #d1d1cf !important
@@ -1311,46 +1218,27 @@ input:focus {
   box-shadow: none !important
 }
 
-select {
+ select {
   outline: 0 !important;
   border-width: 0 0 2px !important;
   border-color: #d1d1cf !important
 }
 
-select:focus {
+ select:focus {
   border-color: #d1d1cf ;
   -webkit-box-shadow: none ;
   box-shadow: none ;
 }
 
-.radiobtn {
+ .radiobtn {
   margin-left: 3.5%
 }
 
-.icons {
-  margin: 1% 
-}
 
-.fa {
-  border-radius: 25px;
-  width: 10%;
-  margin-left: 5%;
-  border: solid 2px #dbdad7;
-  margin-top: 5%;
-  text-align: center
-}
 
-.fa-plane {
-  color: #1cad9f
-}
 
-.fa-taxi {
-  color: #c2f700
-}
 
-.fa-train {
-  color: red
-}
+
 
 @media only screen and (max-width: 600px) {
   .the {
@@ -1398,7 +1286,7 @@ select:focus {
 
 .anhdulich div .text-white {
   position: absolute;
-  top: 55%;
+  top: 5%;
   left: 10%;
   right: 10%;
   font-size: 28px
@@ -1406,7 +1294,7 @@ select:focus {
 
 .anhdulich div .text-muted {
   position: absolute;
-  top: 70%;
+  top: 30%;
   left: 10%;
   right: 12%;
   font-size: 14px;
@@ -1415,22 +1303,26 @@ select:focus {
 
 .anhdulich div .justify-content-between {
   position: absolute;
-  top: 79%;
+  top: 60%;
   left: 10%;
   right: 10%
 }
 
 .justify-content-between span {
-  padding-right: 10px
+  padding-right: 0px;
 }
 
 .justify-content-between hr {
-  border-top: 2px solid #adb5bd;
+
+  border-top: 4px solid #ffffff;
   width: 70px
 }
 
 .justify-content-between hr:hover {
-  border-top: 2px solid #fff;
+  border-top: 5px solid rgb(156, 153, 153);
+  cursor: pointer
+}
+.justify-content-between span:hover{
   cursor: pointer
 }
 .anhdulich hr .first {
@@ -1573,4 +1465,16 @@ margin-left: auto;
 .thebo{
   background-color:#000;
 }
+.ketiep i{
+  font-size: 30px;
+  color:#adb5bd
+}
+.ketiep i:hover{
+  cursor: pointer;
+  color: #403f3f;
+}
 
+
+.hihi{
+  padding-bottom: 0.7%;
+}
