--- a/scss/styles.css
+++ b/scss/styles.css
@@ -398,6 +398,14 @@ img {
   top: 17%;
   left:3%;
 }
+.banner2{
+  -webkit-transform: scale(0.96);
+  transform: scale(0.96);
+}
+.banner3{
+  -webkit-transform: scale(0.96);
+  transform: scale(0.96);
+}
 
 @media screen and (min-width: 900px) {
   .bd-grid {
@@ -496,21 +504,10 @@ img {
 
 
 
-@media screen and (min-width: 570px) {
-  .sticky {
-    position: fixed;
-    top: var(--header-height);
-    background-color: white;
-    max-width: 1265px;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 1000;
-  }
-  .sticky {
-    padding-top: var(--header-height);
-    padding: 4rem 0;
-  }
-}
+
+ 
+  
+
 
 
 .search {
@@ -554,7 +551,7 @@ img {
   width: 970px;
   height: 600px;
   padding: 2rem 0;
-  margin-top: 5%;
+  margin-top: 3%;
   color: var(--white-color);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -603,6 +600,7 @@ img {
   transition: transform 2s ease-in-out, -webkit-transform 0.5s ease-in-out;
 }
 .bannery {
+
   opacity: 1;
   width: 970px;
   height: 500px;
@@ -658,14 +656,22 @@ margin-bottom: 2%;
 }
 
 .banner1 {
-  background-color: #ffffff;
+  background-color: #b5d1c7;
+  -webkit-transform: scale(1.1);
+  transform: scale(0.98);
+  border-radius: 10px;
+  
 }
 
+
+
 .banner2 {
+  border-radius: 10px;
   background-color: #efe5fe;
 }
 
 .banner3 {
+  border-radius: 10px;
   background-color: #aecbdb;
 
 }
@@ -673,8 +679,8 @@ margin-bottom: 2%;
 
 
 .banner_zom {
-  -webkit-transform: scale(0.95);
-          transform: scale(0.95);
+  -webkit-transform: scale(0.94);
+          transform: scale(0.94);
 }
 
 .chungtoi {
@@ -837,7 +843,11 @@ display: none;
 
 
 @media screen and (max-width: 900px) {
-
+  .fl-wrap {
+    float: left;
+    width: 140%;
+    position: relative
+  }
  
   .anhdulich .card {
     
@@ -1477,4 +1487,102 @@ margin-left: auto;
 
 .hihi{
   padding-bottom: 0.7%;
+ 
 }
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+.topnav input[type=text] {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+
+
+  
+
+
+
+.main-search-input {
+  background: #fff;
+  padding: 0 10px 0 0;
+  border-radius: 1px;
+  margin-top: 3px;
+  box-shadow: 0px 0px 0px 6px rgba(255, 255, 255, 0.3)
+}
+@media screen and (min-width: 900px) {
+  .fl-wrap {
+    float: left;
+    width: 230%;
+    position: relative
+  }
+}
+@media screen and (min-width: 1500px) {
+  .fl-wrap {
+    float: left;
+    width: 300%;
+    position: relative
+  }
+}
+
+
+
+
+
+
+.main-search-input-item input:first-child {
+  border-radius: 100%
+}
+
+
+.main-search-button {
+  background: #307ce0;
+  border-radius: 2px;
+}
+
+.main-search-button {
+  position: absolute;
+  right: 0px;
+  height: 28px;
+  width: 120px;
+  color: #fff;
+  top: 0;
+  border: none;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  cursor: pointer
+}
+
+.main-search-input-wrap {
+
+  max-width: 500px;
+  margin:  auto;
+  position: relative
+}
+
